# gdrives

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
.planners/: README.md
.planners/plans/000-mv-command/: plan.md
.planners/plans/001-sheets-read-write/: plan.md
docs/: drive-api.md  setup-adc.md  setup-oauth.md  setup-service-account.md
gdrives/: auth.py  cli.py  download.py  drives.py  export.py  files.py  listing.py  resolve.py  sheets.py
tests/: conftest.py  helpers.py  test_auth.py  test_cli.py  test_download.py  test_drives.py  test_export.py  test_files.py  test_listing.py  test_resolve.py  test_sheets.py  test_sheets_integration.py
